# four-meme-rust-sdk

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: buy_token.rs  create_token.rs  export_private_key.rs  main.rs  sell_token.rs
contract-fetch/: main.ts  package.json  pnpm-lock.yaml
examples/: Cargo.toml  read.rs
src/: client.rs  error.rs  lib.rs  tx_context.rs  types.rs
src/abi/: four_meme.json
